--- a/TP1_memoryGame/app/src/main/res/values/strings.xml
+++ b/TP1_memoryGame/app/src/main/res/values/strings.xml
@@ -4,5 +4,14 @@
     <string name="app_name">TP1_memoryGame</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="btnTwoPlayers_text">Play with other</string>
+    <string name="btnWithTablet_text">Play with Tablet</string>
+    <string name="btnScores_text">Best scores</string>
+    <string name="btnExit_text">Exit</string>
+    <string name="userNameText1">Name of User1:</string>
+    <string name="userNameText2">Name of User2:</string>
+    <string name="name_text">name</string>
+    <string name="gameStart_text">Start</string>
+    <string name="title_userSettingActivity">Players</string>
 
 </resources>
