--- a/TP1_memoryGame/app/src/main/res/values/strings.xml
+++ b/TP1_memoryGame/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="btnTwoPlayers_text">Play with other</string>
-    <string name="btnWithTablet_text">Play with Tablet</string>
+    <string name="btnWithRobot_text">Play with Robot</string>
     <string name="btnScores_text">Best scores</string>
     <string name="btnExit_text">Exit</string>
     <string name="userNameText1">Name of User1:</string>
@@ -14,5 +14,16 @@
     <string name="gameStart_text">Start</string>
     <string name="title_userSettingActivity">Players</string>
     <string name="score_Text">Score:</string>
+    <string name="player_name">name</string>
+    <string name="onePlayerName">One player:</string>
+    <string name="anotherPlayerName">Another player:</string>
+    <string name="score">score</string>
+    <string name="ok">OK</string>
+
+    <string-array name="finish_game">
+        <item>Try again</item>
+        <item>Change game mode</item>
+        <item>Exit</item>
+    </string-array>
 
 </resources>
