--- a/TP1_memoryGame/app/src/main/res/values/strings.xml
+++ b/TP1_memoryGame/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">TP1_memoryGame</string>
+    <string name="app_name">MemoryGame</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="btnTwoPlayers_text">Play with other</string>
@@ -14,7 +14,7 @@
     <string name="gameStart_text">Start</string>
     <string name="title_userSettingActivity">Players</string>
     <string name="score_Text">Score:</string>
-    <string name="player_name">name</string>
+    <string name="player_name">Name</string>
     <string name="onePlayerName">One player:</string>
     <string name="anotherPlayerName">Another player:</string>
     <string name="score">score</string>
