--- a/TP2_LocalisationMap/app/src/main/res/values/strings.xml
+++ b/TP2_LocalisationMap/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="ignore">Ignore</string>
     <string name="settings">Settings</string>
+    <string name="imgcapture">Take Picture</string>
 </resources>
