--- a/TP2_LocalisationMap/app/src/main/res/values/strings.xml
+++ b/TP2_LocalisationMap/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="ignore">Ignore</string>
     <string name="settings">Settings</string>
     <string name="imgcapture">Take Picture</string>
+    <string name="itineraries_info">Itineraries:</string>
 </resources>
